# tajbench

./: .env.example  .gitignore  ITEMS_GUIDE.md  README.md  pyproject.toml
.claude/: documenter.md  launch.json  settings.local.json
baselines/: EVAL_PROGRESS.md  anna_review_packet.md  gemini_eval_handoff.md  gemini_remaining_prompts.md  responses_gemini_2_5_pro.json
benchmark/: __init__.py  schema.py
benchmark/items/tier1_parsing/: tier1_vcf_001.json  tier1_vcf_002.json  tier1_vcf_003.json  tier1_vcf_004.json  tier1_vcf_005.json  tier1_vcf_006.json  tier1_vcf_007.json  tier1_vcf_008.json  tier1_vcf_009.json  tier1_vcf_010.json  tier1_vcf_011.json  tier1_vcf_012.json  tier1_vcf_013.json  tier1_vcf_014.json  tier1_vcf_015.json  tier1_vcf_016.json  tier1_vcf_017.json  tier1_vcf_018.json  tier1_vcf_019.json  tier1_vcf_020.json  tier1_vcf_021.json  tier1_vcf_022.json  tier1_vcf_023.json  tier1_vcf_024.json  tier1_vcf_025.json  tier1_vcf_026.json  tier1_vcf_027.json  tier1_vcf_028.json  tier1_vcf_029.json  tier1_vcf_030.json  tier1_vcf_031.json  tier1_vcf_032.json  tier1_vcf_033.json  (+22 more)
data/: DATA_ACCESS.md
harness/: __init__.py  runner.py  scorer.py
harness/judge_prompts/: tier2_statistics.txt  tier3_structure.txt  tier4_methods.txt
harness/models/: __init__.py  base.py  claude.py  gemini.py  huggingface.py  openai.py
scripts/: analyze_baselines.py  anonymize_mapping.py  audit_judge.py  export_review_packet.py  extract_imputation_qc.py  extract_pca.py  extract_sfs.py  extract_vcf_snippets.py  generate_derived_artifacts.py
tests/: test_schema.py  test_scorer.py
(+168 files in other folders)
